--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -15,9 +15,9 @@ showErrorDetails = true
 port = 8501
 maxUploadSize = 1 # MB
 # restrict access to dev localhost
-# this is modified by upload.sh
+# this is modified by deploy.sh
 address = "127.0.0.1"
-# this is modified by upload.sh
+# this is modified by deploy.sh
 fileWatcherType = "watchdog"
 # baseUrlPath = "/strava-streamlit"
 
