--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Python set up
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: "3.11" # for Uberspace
           cache: "pip"
 
       - name: Run pre-commit hooks
