--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,32 +21,30 @@ jobs:
           persist-credentials: false
           fetch-depth: 1 # 0 if you want to push to repo
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
       - name: Python set up
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11" # for Uberspace
-          cache: "pip"
+          python-version-file: ".python-version"
+
+      - name: Run pytest unittests
+        run: |
+          scripts/copy_test_data.sh
+          cp .streamlit/secrets-EXAMPLE.toml .streamlit/secrets.toml
+          uv run --frozen pytest tests/ --cov --cov-report=xml:coverage.xml
 
       - name: Run pre-commit hooks
         uses: pre-commit/action@v3.0.1
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          # pip install -r requirements-dev.txt
-
-      - name: Install and run pytest
-        run: |
-          scripts/copy_test_data.sh
-          cp .streamlit/secrets-EXAMPLE.toml .streamlit/secrets.toml
-          pip install pytest
-          pytest
-          # pip install pytest pytest-cov
-          # pytest --cov --cov-report=xml
-
-      # for SonarQube Coverage report
+      # for SonarQube coverage report
       # - name: SonarQube Scan
       #   uses: SonarSource/sonarqube-scan-action@v5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      # - name: Minimize uv cache
+      #   run: uv cache prune --ci
