--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,12 +7,14 @@
 # update hooks to latest version
 #  pre-commit autoupdate
 
-# ruff replaces flake8, pyupgrade, and autoflake
-# ruff-format replaces black, isort, add-trailing-comma
+default_language_version:
+  python: python3.11
 
 exclude: |
   (?x)^(
-    .*.vscode/.*.json | tests/testdata/.* | src/strava-resources/.* |
+    \.vscode/.*|
+    tests/testdata/.*|
+    src/strava-resources/.*|
   )$
 
 repos:
@@ -55,7 +57,6 @@ repos:
         args: ["--pytest-test-first"]
       # - id: no-commit-to-branch
       #   args: [--branch, staging]
-      # not, since it decodes utf-8
       - id: pretty-format-json
         args: ["--autofix", "--no-ensure-ascii", "--no-sort-keys"]
       - id: requirements-txt-fixer
@@ -84,7 +85,7 @@ repos:
       - id: gitleaks
 
   # - repo: https://github.com/trufflesecurity/truffleHog
-  #   rev: v3.87.1
+  #   rev: v3.88.4
   #   hooks:
   #     - id: trufflehog
 
@@ -104,11 +105,11 @@ repos:
       - id: rst-inline-touching-normal
       - id: text-unicode-replacement-char
 
-  # # mypy: only for projects where type hints have been added
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v1.8.0
-  #   hooks:
-  #     - id: mypy
+  # CRLF -> LF
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.5.5
+    hooks:
+      - id: remove-crlf
 
   # markdown
   - repo: https://github.com/igorshubovych/markdownlint-cli
@@ -122,21 +123,3 @@ repos:
     rev: v8.19.0
     hooks:
       - id: cspell
-
-  # CRLF -> LF
-  # replaced by .gitattributes file
-  # - repo: https://github.com/Lucas-C/pre-commit-hooks
-  #   rev: v1.5.5
-  #   hooks:
-  #     - id: remove-crlf
-
-  # # Perl
-  # - repo: https://github.com/henryykt/pre-commit-perl
-  #   rev: v0.0.5
-  #   hooks:
-  #     # - id: perlcritic
-  #     - id: perltidy
-  #     # - id: perlimports
-
-default_language_version:
-  python: python3.11
