--- a/.streamlit/secrets-EXAMPLE.toml
+++ b/.streamlit/secrets-EXAMPLE.toml
@@ -5,3 +5,5 @@ my_username = "entorb"
 my_user_id = 234567
 my_token = "YYY"
 my_refresh_token = "ZZZ"
+
+sentry_dns = "https://ingest.de.sentry.io"
