--- a/.streamlit/secrets-EXAMPLE.toml
+++ b/.streamlit/secrets-EXAMPLE.toml
@@ -6,4 +6,4 @@ my_user_id = 234567
 my_token = "YYY"
 my_refresh_token = "ZZZ"
 
-sentry_dns = "https://ingest.de.sentry.io"
+sentry_dsn = "https://ingest.de.sentry.io"
