--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,22 @@
 {
-  "python.analysis.extraPaths": [
-    "${workspaceFolder}/src"
-  ],
+  // Python settings
+  "python.analysis.autoSearchPaths": true,
+  "python.analysis.diagnosticSeverityOverrides": {
+    "reportMissingImports": "none"
+  },
+  "python.analysis.extraPaths": ["${workspaceFolder}/src"],
+  "python.defaultInterpreterPath": ".venv/bin/python",
+  "python.terminal.activateEnvironment": true,
+  // Python pytest settings
+  "python.testing.autoTestDiscoverOnSaveEnabled": true,
+  "python.testing.cwd": "${workspaceFolder}",
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
-  "python.testing.cwd": "${workspaceFolder}/tests",
-  "python.testing.autoTestDiscoverOnSaveEnabled": true,
+  // SonarQube settings
   "sonarlint.connectedMode.project": {
     "connectionId": "entorb",
     "projectKey": "entorb_strava-streamlit"
-  }
+  },
+  "sonarlint.testFilePattern": "./tests/**",
+  "cSpell.words": ["testpaths"]
 }
