--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,10 @@
 [project]
+name = "strava-streamlit"
+version = "0.1.0"
+description = " Strava Äpp V2 using Streamlit"
+readme = "README.md"
+requires-python = ">=3.11"
+
 dependencies = [
     "numpy==2.2.3",
     "pandas==2.2.3",
@@ -7,21 +13,23 @@ dependencies = [
     "streamlit>=1.54.0",
     "xlsxwriter>=3.2.9",
 ]
-name = "strava-streamlit"
-version = "0.1.0"
-description = " Strava Äpp V2 using Streamlit"
-readme = "README.md"
-requires-python = ">=3.11"
-
-[tool.pytest.ini_options]
-pythonpath = "src"
 
 [dependency-groups]
 dev = [
     "pre-commit>=4.5.1",
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
-    "ruff>=0.15.0",
+    "ruff>=0.15.1",
     "tomli-w>=1.2.0",
     "watchdog>=6.0.0",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+testpaths = ["tests"]
+
+[tool.coverage.run]
+source = ["src"]
+
+[tool.coverage.report]
+exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
